# algo

./: .gitignore  README.md  dual_momentum.ipynb  sp500.csv  t6.ipynb
app/: CMakeLists.txt  algo.py  main.py
app/src/: main.cpp  windows.rc
app/src/controller/: controller.cpp  controller.h  export.h  googlemp.cpp  googlemp.h  pyutil.cpp  pyutil.h  util.cpp  util.h  worker.cpp  worker.h
app/src/resources/: Info.plist  algo.qrc
app/src/resources/images/: icon.icns
app/src/resources/lang/: lang_ar.ts  lang_en.qm  lang_en.ts  lang_es.qm  lang_es.ts
app/src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
app/strategies/: download.py  hello.py
data/: AAPL.t6  sp500.csv
strategies/: DualMagic.c  hilbert.ipynb  nasdaq.ipynb  price.ipynb  random_walk.ipynb
